# twstools

./: .gitignore  .travis-functions.sh  .travis.yml  ChangeLog  GNUmakefile  LICENSE  Makefile.am  README  configure.ac  git-version-gen  twstool.pro  twstools.pc.in  twstools.spec.in
doc/: Makefile.am  TWSXML.txt  TWSXML.xsd  author.h2m  twsdo.h2m  twsgen.h2m  twsxml-0.1.rng
m4/: git_version_magic.m4
sample/: Makefile.am  get_account_info.sh  get_some_forex_data.sh  get_some_future_data.sh  sample_job_contracts_forex.xml  sample_job_contracts_future.xml  sample_job_contracts_stock.xml  sample_job_order.xml
src/: Makefile.am  debug.h  dso_magic.h  main.cpp  proof_of_concept.cpp  properties.cpp  properties.h  src.pro  twsClient.cpp  twsClient.h  twsDL-example.cfg  twsDL.cpp  twsDL.h  twsDL.pro  twsUtil.cpp  twsUtil.h  twsWrapper.cpp  twsWrapper.h  tws_account.cpp  tws_account.h  tws_client.cpp  tws_client.h  tws_meta.cpp  tws_meta.h  tws_query.cpp  tws_query.h  tws_quote.cpp  tws_quote.h  tws_strat.cpp  tws_strat.h  tws_util.cpp  tws_util.h  tws_wrapper.cpp  tws_wrapper.h  tws_xml.cpp  tws_xml.h  twsdo.cpp  twsdo.ggo  twsdo.h  twsdo_main.cpp  (+6 more)
test/: Makefile.am  con_cash.xml  con_fut.xml  defaults.01.twst  defaults.02.twst  defaults.03.twst  defaults.04.twst  file.01.xml  file.02.xml  hist_data_no_defaults.xml  hist_data_with_defaults.xml  tws-test.sh  twsgen_hist.01.twst  twsgen_hist.02.twst  twsgen_hist.03.twst  twsgen_hist.04.twst  twsgen_hist.05.twst  work_hist_cash_01.xml  work_hist_fut_01.xml  work_hist_fut_02.xml
